[package]
authors = ["Grire Trilr <griretrilr@gmail.com>"]
edition = "2018"
name = "vulkan_tutorial_rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19"
vulkano-shaders = "0.19"
vulkano-win = "0.19"
winit = "0.22"
